Version 1.0.2 Refactor code style and update validation messages across multiple files